--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,13 +9,11 @@ name: Java CI with Gradle
 
 on: [push, pull_request]
   
-permissions:
-  contents: read
-
 jobs:
   build:
 
     runs-on: ubuntu-latest
+
 
     steps:
     - uses: actions/checkout@v3
@@ -24,7 +22,7 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
-      with:
-        arguments: build
+      run: ./gradlew test
